--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "pnotify": "^4.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-loader-spinner": "^3.1.5",
     "react-scripts": "^3.3.0",
     "serialize-javascript": "^2.1.2",
     "short-id": "0.1.0-1",
