--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "animate.css": "^3.7.2",
     "axios": "^0.19.0",
+    "basiclightbox": "^5.0.2",
     "classnames": "^2.2.6",
     "eslint-utils": "^1.4.3",
     "gh-pages": "^2.0.1",
